<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgThumb"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="end|center"
            android:elevation="5dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/dessert_img"
            app:civ_border_color="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:civ_border_width="2dp"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="16dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sign_up_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:paddingBottom="25dp"
            android:background="@drawable/bg_log_in"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/sign_up_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="20sp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/yellowTextColor"/>

            <TextView
                android:id="@+id/sign_in_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/sign_in"
                android:alpha=".6"
                android:textColor="@color/yellowTextColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/sign_up_TV"
                app:layout_constraintTop_toTopOf="@id/sign_up_TV"/>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/custom_background"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toBottomOf="@id/sign_up_TV"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/yellowTextColor"
                android:textSize="16sp"
                android:text="  Name"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:drawableStartCompat="@drawable/user_icon" />


            <EditText
                android:id="@+id/enterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/yellowTextColor"
                android:textSize="16sp"
                android:text="  Email"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterName"
                app:drawableStartCompat="@drawable/email_icon" />


            <EditText
                android:id="@+id/enterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTV"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/passwordTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/yellowTextColor"
                android:textSize="16sp"
                android:text="  Password"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterEmail"
                app:drawableStartCompat="@drawable/password_icon" />


            <EditText
                android:id="@+id/enterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTV"
                tools:ignore="LabelFor" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/idBtnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="@string/register_here"
            android:background="@drawable/bg_button"
            android:textColor="@color/yellowTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/sign_up_layout"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/idBtnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:text="@string/logIn"
            android:background="@drawable/bg_button"
            android:textColor="@color/yellowTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/sign_up_layout"
            android:textAllCaps="false" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/idBtnRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>